# duk

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  justfile  vcpkg-configuration.json  vcpkg.json
duk_animation/: CMakeLists.txt
duk_animation/include/duk_animation/: animation.h  animation_handler.h  animation_pool.h  animation_system.h  animator.h  property.h  register_types.h
duk_animation/src/duk_animation/: animation.cpp  animation_handler.cpp  animation_pool.cpp  animation_system.cpp  property.cpp  register_types.cpp
duk_api/: CMakeLists.txt
duk_api/include/duk_api/: api.h  register_types.h
duk_api/src/duk_api/: register_types.cpp
duk_audio/: CMakeLists.txt
duk_audio/include/duk_audio/: audio_buffer.h  audio_clip_importer.h  audio_clip_pool.h  audio_device.h  audio_engine.h  audio_graph.h  audio_id.h  audio_player.h  audio_processor.h  audio_source.h  decode.h  register_types.h
duk_audio/src/duk_audio/: audio_clip.cpp  audio_clip_importer.cpp  audio_clip_pool.cpp  audio_device.cpp  audio_engine.cpp  audio_graph.cpp  audio_player.cpp  audio_source.cpp  decode.cpp  register_types.cpp
duk_audio/test/: CMakeLists.txt  main.cpp  sample.flac
duk_cli/: CMakeLists.txt
duk_cli/include/duk_cli/: command_line.h  file_generator.h  parser.h
duk_cli/src/duk_cli/: command_line.cpp  file_generator.cpp  main.cpp  parser.cpp
duk_cli/test/: test.h
duk_engine/: CMakeLists.txt  README.md
duk_engine/include/duk_engine/: context.h  director.h  engine.h  input.h  register_types.h  settings.h  systems.h
duk_engine/src/duk_engine/: context.cpp  director.cpp  engine.cpp  input.cpp  register_types.cpp  settings.cpp  systems.cpp
duk_event/: CMakeLists.txt  README.md
duk_event/include/duk_event/: event.h
duk_event/src/duk_event/: event.cpp
duk_event/test/: CMakeLists.txt  main.cpp
duk_events/: CMakeLists.txt  README.md
duk_events/include/duk_events/: event.h
duk_events/src/duk_events/: event.cpp
duk_events/test/: CMakeLists.txt  main.cpp
duk_hash/: CMakeLists.txt  README.md
duk_hash/include/duk_hash/: common_hashes.h  data_source.h  hash.h  hash_combine.h
duk_hash/src/duk_hash/: data_source.cpp
duk_import/: CMakeLists.txt
duk_import/include/duk_import/: importer.h  resource_importer.h  resource_set_importer.h
duk_import/src/duk_import/: importer.cpp  resource_importer.cpp  resource_set_importer.cpp
duk_json/: CMakeLists.txt
duk_json/include/duk_json/: rapidjson.h  string.h  types.h
duk_json/src/duk_json/: string.cpp
duk_log/: CMakeLists.txt  README.md
duk_log/include/duk_log/: cout_sink.h  file_sink.h  fmt_sink.h  format.h  log.h  logger.h  sink.h  sink_cout.h  sink_file.h  sink_fmt.h  sink_std_console.h
duk_log/src/duk_log/: cout_sink.cpp  file_sink.cpp  fmt_sink.cpp  log.cpp  logger.cpp  sink.cpp  sink_cout.cpp  sink_file.cpp  sink_fmt.cpp  sink_std_console.cpp
duk_log/test/: CMakeLists.txt  main.cpp
duk_macros/: CMakeLists.txt  README.md
duk_macros/include/duk_macros/: assert.h  macros.h
duk_macros/src/duk_macros/: assert.cpp
duk_material_generator/: CMakeLists.txt
duk_material_generator/include/duk_material_generator/: generator.h  parser.h  reflector.h  types.h
duk_material_generator/src/duk_material_generator/: generator.cpp  main.cpp  parser.cpp  reflector.cpp  types.cpp
duk_math/: CMakeLists.txt  README.md
duk_math/include/duk_math/: aabb.h  math.h
duk_math/src/duk_math/: aabb.cpp  math.cpp
duk_objects/: CMakeLists.txt  README.md
duk_objects/include/duk_objects/: component_pool.h  events.h  id.h  limits.h  object_solver.h  objects.h  objects_handler.h  objects_importer.h  objects_pool.h  register_types.h  scene.h  scene_pool.h  systems.h
duk_objects/src/duk_objects/: component_pool.cpp  id.cpp  objects.cpp  objects_handler.cpp  objects_importer.cpp  objects_pool.cpp  register_types.cpp  scene.cpp  scene_pool.cpp  system.cpp
duk_objects/test/: CMakeLists.txt  main.cpp
duk_painter_generator/: CMakeLists.txt
duk_painter_generator/include/duk_painter_generator/: generator.h  parser.h  reflector.h  types.h
duk_painter_generator/src/duk_painter_generator/: generator.cpp  main.cpp  parser.cpp  reflector.cpp  types.cpp
duk_platform/: CMakeLists.txt  README.md
duk_platform/include/duk_platform/: Input.h  console.h  cursor.h  key_codes.cpp  key_codes.h  platform.h  system.h  window.h  window_error.h
duk_platform/src/duk_platform/: Input.cpp  console.cpp  cursor.cpp  platform.cpp  system.cpp  window.cpp  window_error.cpp
duk_platform/test/: CMakeLists.txt  main.cpp
duk_pool/: CMakeLists.txt  README.md
duk_pool/include/duk_pool/: pool.h  resource.h
duk_pool/src/duk_pool/: pool.cpp  resource.cpp
duk_project/: CMakeLists.txt
duk_project/include/duk_project/: project.h  register_types.h  resource.h
duk_project/src/duk_project/: project.cpp  register_types.cpp  resource.cpp
duk_renderer/: CMakeLists.txt  README.md
duk_renderer/include/duk_renderer/: README.md  buffer.h  builtins.h  canvas.h  command.h  command_buffer.h  command_interface.h  command_queue.h  command_scheduler.h  data_source.h  descriptor.h  descriptor_set.h  frame_buffer.h  generic_brush.h  hash.h  image.h  image_data_source.h  image_sampler.h  macros.h  mesh.h  mesh_buffer.h  mesh_data_source.h  register_types.h  render_pass.h  renderer.h  renderer_capabilities.h  sort.h  (+7 more)
duk_renderer/test/: CMakeLists.txt  main.cpp
duk_renderer/tools/: CMakeLists.txt
duk_resource/: CMakeLists.txt  README.md
duk_resource/test/: CMakeLists.txt  main.cpp
duk_rhi/: CMakeLists.txt  README.md
duk_runtime/: CMakeLists.txt
duk_sample/: .gitattributes  CMakeLists.txt  settings.json
duk_sample/.duk/: .gitignore
duk_sample/resources/: resources.json  sample.duk
duk_scene/: CMakeLists.txt  README.md
duk_scene/test/: CMakeLists.txt  main.cpp
duk_serial/: CMakeLists.txt
duk_serial/test/: CMakeLists.txt  json.cc  main.cpp
duk_shader_generator/: CMakeLists.txt
duk_system/: CMakeLists.txt
duk_system/test/: CMakeLists.txt  main.cpp
duk_task/: CMakeLists.txt  README.md
(+1127 files in other folders)
